# chatviafile

./: .gitignore  CMakeLists.txt  README.md  WorkWithFile.cpp  WorkWithFile.h  main.cpp
.github/workflows/: cmake.yml
doc/: testfile
doc/html/: _r_e_a_d_m_e_8md.html  _work_with_file_8cpp.html  _work_with_file_8h.html  _work_with_file_8h_source.html  annotated.html  class_work_with_file-members.html  class_work_with_file.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  index.html  main_8cpp.html  md___users_igorgusakov_project__test__samsung__r_e_a_d_m_e.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
doc/latex/: _r_e_a_d_m_e_8md.tex  _work_with_file_8cpp.tex  _work_with_file_8h.tex  _work_with_file_8h_source.tex  annotated.tex  class_work_with_file.tex  files.tex  index.tex  main_8cpp.tex  md___users_igorgusakov_project__test__samsung__r_e_a_d_m_e.tex  refman.tex
unit-test/: test_file.cpp
